--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,6 @@
-version: '3.8'
-
 services:
   frontend:
-    image: toinouu/docnote-front:latest
-    container_name: frontend
+    build: ./nextjs
     ports:
       - "3000:3000"
     environment:
@@ -13,18 +10,18 @@ services:
 
   db:
     image: postgres:15
-    container_name: directus_db
+    container_name: docnote-db
     restart: always
     environment:
-      POSTGRES_DB: directus
-      POSTGRES_USER: directus
-      POSTGRES_PASSWORD: directus
+      POSTGRES_DB=directus
+      POSTGRES_USER=directus
+      POSTGRES_PASSWORD=directus
     volumes:
       - directus_db_data:/var/lib/postgresql/data
 
   directus:
     image: directus/directus:latest
-    container_name: directus
+    container_name: docnote-directus
     ports:
       - "8055:8055"
     volumes:
