--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,9 @@ services:
     container_name: docnote-db
     restart: always
     environment:
-      POSTGRES_DB=directus
-      POSTGRES_USER=directus
-      POSTGRES_PASSWORD=directus
+      POSTGRES_DB: directus
+      POSTGRES_USER: directus
+      POSTGRES_PASSWORD: directus
     volumes:
       - directus_db_data:/var/lib/postgresql/data
 
