--- a/nextjs/Dockerfile
+++ b/nextjs/Dockerfile
@@ -1,11 +1,22 @@
 FROM node:18-alpine
 
-# Clone le repo dans le bon dossier dès le départ
-RUN apk add --no-cache git && \
-    git clone -b test https://github.com/StayZe/docnote-front.git /app
+# Install git to clone if necessary (you can remove this if COPY is used)
+RUN apk add --no-cache git
 
+# Set working directory
 WORKDIR /app
 
-RUN npm install && npm run build
+# Clone repo or COPY for local dev (recommend COPY during active dev)
+RUN git clone -b test https://github.com/StayZe/docnote.git /app
 
-CMD ["npm", "run", "start"]
+# Prefer local copy in dev
+COPY . .
+
+# Install deps and build
+RUN npm install
+
+# Expose port if needed (default Next.js is 3000)
+EXPOSE 3000
+
+# Dev command for hot-reloading
+CMD ["npm", "run", "dev"]
