--- a/nextjs/Dockerfile
+++ b/nextjs/Dockerfile
@@ -1,27 +1,22 @@
-# Étape 1 : Build
+# Étape 1 : build l'app
 FROM node:18-alpine AS builder
 
-# Installer git si nécessaire pour cloner
 RUN apk add --no-cache git
 
 WORKDIR /app
 
-# Cloner le dépôt
+# Clone directement dans /app
 RUN git clone -b test https://github.com/StayZe/docnote.git /app
 
-# Installer dépendances et build
 RUN npm install && npm run build
 
-# Étape 2 : Image finale minimaliste
+# Étape 2 : image finale légère
 FROM node:18-alpine
 
 WORKDIR /app
 
-# Copier uniquement ce qu'il faut depuis l'étape de build
 COPY --from=builder /app ./
 
-# Exposer le port par défaut de Next.js (en mode production)
 EXPOSE 3000
 
-# Lancer l'app Next.js
 CMD ["npm", "start"]
