Fix db api directus

--- a/directus/directus.env
+++ b/directus/directus.env
@@ -10,6 +10,9 @@ DB_PASSWORD=directus
 ADMIN_EMAIL=admin@admin.com
 ADMIN_PASSWORD=admin
 
+CORS_ENABLED=true
+CORS_ORIGIN=*
+
 # Sécurité (clé secrète pour JWT, sessions...)
 KEY=supersecretkeydocnote123
 
