--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
   db:
     image: postgres:15
     container_name: directus_db
-    platform: linux/arm64
+    platform: linux/amd64
     restart: always
     environment:
       POSTGRES_DB: directus
